--- a/ziox-web/index.html
+++ b/ziox-web/index.html
@@ -7,16 +7,39 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <!-- Native CSS -->
+    <link rel="stylesheet" href="css/estilos.css">
+    
+    <title>ZIOX - Enterprises</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
 
+  <body>
+    <div class="container-fluid shadow" id="header" align="center">
+      <div class="includeMenu"></div>
+      <h1 class="display-1" id="Intro">ZI/OX</h1>
+      <h1 class="display-4" id="Intro">Your Idea, Our Code < / > </h1>
+    </div>
+
+    <div class="container-fluid " align="center" id="DivServicios">
+      <h1 id="Pres">Nuestros Servicios</h1>
+    </div>
+
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-  </body>
+    <script>
+      $(function(){
+        $(".includeMenu").load("resources/menu.html"); 
+      });
+  
+      $(function(){
+        $(".includeFooter").load("resources/footer.html"); 
+      });
+  </script>
+ </body>
 </html>
+
