--- a/ziox-web/resources/footer.html
+++ b/ziox-web/resources/footer.html
@@ -1,28 +1,4 @@
 
- <!-- <div class="hero-foot">
-        <nav class="tabs is-boxed is-fullwidth">
-          <div class="container">
-            <ul>
-              <li>
-                <a>Nuestra Empresa</a>
-              </li>
-              <li class="is-active">
-                <a>Proyectos</a>
-              </li>
-              <li>
-                <a>Contáctanos</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>  -->
+<div class="container-fluid parallax-window" data-parallax="scroll" data-image-src="imgs/img3.jpg" id="footer"></div>
 
-      <footer class="footer">
-            <div class="content has-text-centered">
-              <p>
-                <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
-                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
-              </p>
-            </div>
-          </footer>
+<script src="js/parallax.js"></script>
