--- a/ziox-web/resources/footer.html
+++ b/ziox-web/resources/footer.html
@@ -1,4 +1,17 @@
 
-<div class="container-fluid parallax-window" data-parallax="scroll" data-image-src="imgs/img3.jpg" id="footer"></div>
+<div class="container-fluid parallax-window" data-parallax="scroll" data-image-src="imgs/img3.jpg" id="footer">
+    <div class="row">
+      <div class="col-sm-6 col-md-6 col-lg-6 footerfont" >
+          <p class="text-center">Center aligned text on all viewport sizes.</p>
+      </div>
+      <div class="col-sm-6 col-md-6 col-lg-6 footerfont">
+          <p class="text-center">Center aligned text on all viewport sizes.</p>
+      </div>
+    
+      <div class="col-12 footerfont">
+          <p class="text-center">Center aligned text on all viewport sizes.</p>
+      </div>
 
+    </div>
+</div>
 <script src="js/parallax.js"></script>
