--- a/ziox-web/resources/footer.html
+++ b/ziox-web/resources/footer.html
@@ -1,17 +1,43 @@
-
 <div class="container-fluid parallax-window" data-parallax="scroll" data-image-src="imgs/img3.jpg" id="footer">
-    <div class="row">
-      <div class="col-sm-6 col-md-6 col-lg-6 footerfont" >
-          <p class="text-center">Center aligned text on all viewport sizes.</p>
-      </div>
-      <div class="col-sm-6 col-md-6 col-lg-6 footerfont">
-          <p class="text-center">Center aligned text on all viewport sizes.</p>
-      </div>
-    
-      <div class="col-12 footerfont">
-          <p class="text-center">Center aligned text on all viewport sizes.</p>
-      </div>
-
+  <div class="row">
+    <div class="col-sm-12 col-lg-4 footerDivs">
+      <p class="text-center footerFont">
+        ZI/OX - Enterprises
+      </p>
+      <p class="text-center font-weight-light footerFont">
+        ZI/OX es una empresa fundada por jóvenes emprendedores reconocidos nacionalmente por sus interesantes proyectos computacionales,
+        así como su pasión por la computación y programación.
+      </p>
     </div>
+
+    <div class="col-sm-12 col-lg-4 footerDivs">
+      <p class="text-center footerFont">¿Qué significa ZI/OX? </p>
+      <p class="text-center font-weight-light footerFont">
+        ZI/OX por sus siglas Zacatecas Input / Output México es una empresa que se dedica a desarrollar todo tipo de aplicaciones
+        web, sistemas y páginas web enfocado a todo publico.
+      </p>
+    </div>
+
+    <div class="col-sm-12 col-lg-4 footerDivs">
+      <p class="text-center footerFont">Contacto</p>
+      <p class="text-center font-weight-light footerFont">
+        <i class="fab fa-facebook-square"></i>
+        <a class="footerLink" href="">Facebook </a>
+        <br>
+        <i class="fab fa-twitter-square"></i>
+        <a class="footerLink" href="">Twitter </a>
+        <br>
+        <i class="fas fa-envelope"></i>
+        <a class="footerLink" href="">E-mail </a>
+        <br>
+      </p>
+    </div>
+
+    <div class="col-12 footerDivs">
+      <hr>
+      <p class="text-center footerFont">Copyright © 2018 | ZI/OX Enterprises</p>
+    </div>
+
+  </div>
 </div>
 <script src="js/parallax.js"></script>
