--- a/ziox-web/index.html
+++ b/ziox-web/index.html
@@ -41,12 +41,13 @@
   <div id="TarjetasServ">
     <div class="card-deck">
       <div class="card shadow-sm">
-        <img class="card-img-top img-fluid" src="https://images.unsplash.com/photo-1524179329296-21161027e24d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e9c815bc714ff2c1f61af3fc0747ef81&auto=format&fit=crop&w=1050&q=80"
+        <img class="card-img-top img-fluid" src="https://images.unsplash.com/photo-1483478550801-ceba5fe50e8e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e5e8c1c5e29d1a72d4870d188b49a598&auto=format&fit=crop&w=1050&q=80"
           alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Applicaciones Web</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a
-            little bit longer.</p>
+        <div class="card-body" align="justify">
+          <h5 class="card-title">Aplicaciones Web</h5>
+          <p class="card-text">
+            Desarrollamos todo tipo de Aplicaciones web para que puedas llevar siempre contigo el monitoreo de tus proyectos o negocios.
+          </p>
           <p class="card-text">
             <small class="text-muted">Last updated 3 mins ago</small>
           </p>
@@ -55,9 +56,12 @@
       <div class="card shadow-sm">
         <img class="card-img-top img-fluid" src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=47d2b1f32cc05c976af4a39256e01cba&auto=format&fit=crop&w=1050&q=80s"
           alt="Card image cap">
-        <div class="card-body">
+        <div class="card-body" align="justify">
           <h5 class="card-title">Sistemas Administrativos</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text">
+            Nos enfocamos en crear sistemas que puedan sustituir actividades repetitivas dentro de todo tipo de proyecto o negocio, 
+            de tal manera que la eficiencia de esta pueda verse incrementada.
+          </p>
           <p class="card-text">
             <small class="text-muted">Last updated 3 mins ago</small>
           </p>
@@ -66,10 +70,12 @@
       <div class="card shadow-sm">
         <img class="card-img-top img-fluid" src="https://images.unsplash.com/photo-1454165205744-3b78555e5572?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=863ffeea823f0ffb0885fe1a5e77e645&auto=format&fit=crop&w=1050&q=80"
           alt="Card image cap">
-        <div class="card-body">
+        <div class="card-body" align="justify">
           <h5 class="card-title">Páginas Web</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even
-            longer content than the first to show that equal height action.</p>
+          <p class="card-text">
+            Desarrollamos páginas web de la mejor calidad, adaptables a cualquier tipo de dispositivo. Ideales para que su negocio
+            o empresa se de a conocer.
+          </p>
           <p class="card-text">
             <small class="text-muted">Last updated 3 mins ago</small>
           </p>
@@ -147,7 +153,7 @@
         </div>
         <div class="card-footer">
           <small class="text-muted">
-            <i class="fas fa-envelope"></i> luistrejihi@gmail.com
+            <i class="fas fa-envelope"></i> luistrejohi@gmail.com
             <br>
             <i class="fab fa-twitter"></i> @secretpiggy
           </small>
