--- a/ziox-web/index.html
+++ b/ziox-web/index.html
@@ -28,8 +28,7 @@
     <div class="includeMenu"></div>
 
     <h1 class="display-1" id="Intro">ZI/OX</h1>
-    <h1 class="display-4" id="Intro">Your Idea, Our Code
-      <\>
+    <h1 class="display-4" id="Intro">Your Idea, Our Code<\>
     </h1>
   </div>
 
